<resources>
    <string name="koolew">可见</string>
    <string name="app_name">可见</string>
    <string name="hello_world">Hello world!</string>
    <string name="empty_string" translatable="false">""</string>
    <string name="next_step">下一步</string>
    <string name="back">返回</string>
    <string name="close">关闭</string>
    <string name="friends_list">好友列表</string>
    <string name="done">完成</string>
    <string name="communcating_with_server">正在与服务器通信...</string>
    <string name="connect_server_failed">连接服务器失败！</string>
    <string name="koo">打赏</string>
    <string name="comment">评论</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_closed">Close</string>
    <string name="there_is_no_more">下面已经什么都没有啦</string>
    <string name="loading">正在加载</string>
    <string name="remove">移除</string>
    <string name="add">添加</string>
    <string name="accept">接受</string>
    <string name="comma">，</string>
    <string name="invite">邀请</string>
    <string name="save">保存</string>
    <string name="failed">失败了</string>
    <string name="counter_ge" formatted="false">"%d个"</string>
    <string name="cancel">取消</string>
    <string name="danmaku">弹幕</string>
    <string name="notification">通知</string>
    <string name="ignore">忽略</string>
    <string name="not_enough_coin_hint">金币不够了！打卡可以赚金币！</string>
    <string name="search">搜索</string>
    <string name="topic">话题</string>
    <string name="more">更多</string>
    <string name="unknown_error">未知错误</string>
    <string name="confirm">确认</string>
    <string name="say">说</string>
    <string name="colon">：</string>
    <string name="delete">删除</string>
    <string name="retain">保留</string>
    <string name="date">日期</string>
    <string name="status">状态</string>
    <string name="explain">说明</string>
    <string name="request_data_failed">请求数据失败！</string>
    <string name="retry_or_not">是否要重试？</string>
    <string name="retry">重试</string>
    <string name="there_is_an_error">"出错啦 T_T"</string>
    <string name="network_error">网络错误</string>
    <string name="ok">好的</string>
    <string name="recommend">推荐</string>
    <string name="title_koolew">首页</string>
    <string name="title_shop">商城</string>
    <string name="title_play">最佳视频评选</string>
    <string name="title_message">消息</string>
    <string name="title_friend">好友</string>
    <string name="title_clock_in">打卡领金币</string>
    <string name="title_settings">设置</string>
    <string name="title_add">新建话题</string>
    <string name="got_support_num" formatted="false">获得打赏：%d</string>
    <string name="got_koo">获得打赏</string>
    <string name="coin_count">金币数量</string>
    <string name="fans_count" formatted="false">"%d 粉丝"</string>
    <string name="follows_count" formatted="false">"%d 关注"</string>
    <string name="today_income_renminbi" formatted="false">今日收益（人民币）：%.3f元</string>
    <string name="join_video_topic">参与视频话题</string>
    <string name="be_an_actor">我要做演员</string>
    <string name="new_video_topic">新话题</string>
    <string name="new_movie">新表演</string>
    <string name="choice_video_topic">搜索你想拍摄的话题</string>
    <string name="choice_movie_topic">选择你想表演的视频</string>
    <string name="app_name_english">KOOLEW</string>
    <string name="label_select_login_way">选择以下登陆方式</string>
    <string name="geting_sns_info">正在获取第三方账号信息...</string>
    <string name="please_bind_mobile">请绑定手机号</string>
    <string name="title_activity_phone_login">PhoneLoginActivity</string>
    <string name="label_input_phone_number">请输入手机号</string>
    <string name="send_dynamic_password">发送动态密码</string>
    <string name="please_input_correct_phone_num">请输入正确的手机号</string>
    <string name="send_password_hint1">系统向你的手机</string>
    <string name="send_password_hint3">发送了一条动态密码</string>
    <string name="resend_password">重发动态密码</string>
    <string name="count_down_string" formatted="false">(%d秒)</string>
    <string name="requesting_password">正在向服务器请求动态密码...</string>
    <string name="error_phone_code">验证码输入错误</string>
    <string name="edit_personal_info">编辑个人信息</string>
    <string name="your_portrait">你的头像</string>
    <string name="your_nickname">你的昵称</string>
    <string name="nickname_over_input_message" formatted="false">昵称不能超过%d个字符！</string>
    <string name="no_nickname_message">请输入昵称！</string>
    <string name="loading_friends">正在加载好友列表...</string>
    <string name="koolew_news_title">关 注</string>
    <string name="koolew_involve_title">我 的</string>
    <string name="koolew_recommend_title">话 题</string>
    <string name="koolew_square_title">广 场</string>
    <string name="koolew_meet_title">遇见</string>
    <string name="koolew_favorite_title">收藏</string>
    <string name="see_more">查看更多</string>
    <string name="search_topic_label">搜索你想拍摄的话题</string>
    <string name="koolew_feeds_no_data_text">你还没有关注任何人，\n快去竞技场认识新朋友吧！</string>
    <string name="feeds_recommend_user_title">可能认识的人</string>
    <string name="feeds_add_recommend_user_text">"+ 添加"</string>
    <string name="absolutely_new" formatted="false">%d new</string>
    <string name="more_video">更多视频</string>
    <string name="recommend_user_summary" formatted="false">%d个关注｜%d个粉丝</string>
    <string name="joined_video">参与视频</string>
    <string name="i_no_video">你还没有拍过视频，\n快来参加有趣的话题吧！</string>
    <string name="he_or_she_no_video">Ta 还没发布内容或内容仅好友可见</string>
    <string name="friend_meet_title">附近的人</string>
    <string name="friend_contact_title">通讯录好友</string>
    <string name="friend_weibo_title">微博好友</string>
    <string name="friend_current_title">互相关注</string>
    <string name="friend_follows_title">我关注的</string>
    <string name="friend_fans_title">我的粉丝</string>
    <string name="no_friends_text">多发弹幕多打赏，就能交到新朋友</string>
    <string name="no_follow_text">去竞技场关注有趣的人\n会有意外惊喜～</string>
    <string name="no_fans_text">多关注别人，\n别人也会来回粉！</string>
    <string name="no_contact_text">您关闭了通讯录权限，无法查看好友\n（开启方法：手机设置/第三方管理软件 - 应用/安全中心 - 允许可见读取联系人）</string>
    <string name="video_count_label" formatted="false">视频总数：%d个</string>
    <string name="video_count" formatted="false">视频数：%d个</string>
    <string name="invited_label">你被点名啦！</string>
    <string name="feeds_title_friend">好友圈</string>
    <string name="world_title_public">世界</string>
    <string name="i_want_capture">我要拍</string>
    <string name="send_invitation">点名好友</string>
    <string name="world">世界</string>
    <string name="share">分享</string>
    <string name="share_topic">分享话题</string>
    <string name="accept_invitation">接受点名</string>
    <string name="import_video">导入</string>
    <string name="capture_video">点一下拍摄</string>
    <string name="capturing">拍摄中</string>
    <string name="video_shoot_time_text" formatted="false">%.1f/%.1f秒</string>
    <string name="processing_video">正在处理视频...</string>
    <string name="there_is_no_video">还没拍视频呢</string>
    <string name="video_too_long" formatted="false">视频超过%d秒了，请编辑</string>
    <string name="confirm_give_up_videos">确认放弃已拍摄的视频吗？</string>
    <string name="max_video_len_hint" formatted="false">视频最多只能拍摄%d秒，右划可以删除视频哦～</string>
    <string name="concat_video_failed">视频处理失败 T_T</string>
    <string name="generate_thumb_failed">缩略图生成失败 T_T</string>
    <string name="fail_to_open_camera">打开摄像头失败，可能是被安全软件阻止，或被其他应用占用。\n请检查。</string>
    <string name="too_short_to_delete">是否删除此段？</string>
    <string name="transcoding">正在转码视频</string>
    <string name="please_wait_a_moment">请稍等</string>
    <string name="long_video_enabled">开启%d秒拍摄界面</string>
    <string name="filter">滤镜</string>
    <string name="filter_beauty001">颜</string>
    <string name="filter_1988">遂</string>
    <string name="filter_heart">谧</string>
    <string name="filter_06">忆</string>
    <string name="filter_beauty">樱</string>
    <string name="filter_blend">晓</string>
    <string name="filter_rise">时</string>
    <string name="filter_whitecat">欣</string>
    <string name="filter_live">寂</string>
    <string name="filter_humming">穹</string>
    <string name="filter_cold">质</string>
    <string name="filter_bnw">光</string>
    <string name="filter_banana">述</string>
    <string name="filter_17">清</string>
    <string name="sms_invitation_message" formatted="false">来「可见」和我一起玩视频点名吧，下载链接：%s</string>
    <string name="video_edit_title">编辑视频</string>
    <string name="who_can_see">可以给谁看</string>
    <string name="authority">权限</string>
    <string name="only_friend_visible">仅互相关注</string>
    <string name="public_visible">公开</string>
    <string name="music">音乐</string>
    <string name="uploading">正在上传...</string>
    <string name="upload_failed">上传失败</string>
    <string name="save_to_local_failed">保存到本地失败</string>
    <string name="choice_a_tag_please">请选择一个分类：</string>
    <string name="video_share_hint_message">写上一句分享的话语</string>
    <string name="common_topic">共同话题</string>
    <string name="common_friend" formatted="false">共同好友（%d人）</string>
    <string name="padding_friend_label">TA关注了你</string>
    <string name="recommend_friend_label">好友推荐</string>
    <string name="nearby_user">附近的人</string>
    <string name="contact_friend">通讯录好友</string>
    <string name="phone_contact_name" formatted="false">手机通讯录：%s</string>
    <string name="request_for_friend">请求加你为好友</string>
    <string name="waiting_for_accept">等待通过</string>
    <string name="sent_invitation">已发送好友申请</string>
    <string name="delete_friend_confirm">确认删除好友吗？</string>
    <string name="unfollow_confirm">要取消关注TA吗？</string>
    <string name="distance_less_than_100">距离小于100米</string>
    <string name="distance_100_to_1000" formatted="false">距离%d米</string>
    <string name="distance_more_than_1000" formatted="false">距离%.1f千米</string>
    <string name="follow">关注</string>
    <string name="followed">已关注</string>
    <string name="followed_each_other">互相关注</string>
    <string name="add_follow">"+ 关注"</string>
    <string name="intelligent">智能</string>
    <string name="push_settings">新消息通知</string>
    <string name="intelligent_save_data_mode">智能节省流量模式</string>
    <string name="service">服务</string>
    <string name="official_wechat">官方微信</string>
    <string name="contact_koolew_service">联系可见客服</string>
    <string name="about">关于</string>
    <string name="want_talk">我想和你谈谈</string>
    <string name="privacy_policy">隐私条款</string>
    <string name="user_agreement">用户协议</string>
    <string name="check_update">检查更新</string>
    <string name="logout">登出</string>
    <string name="logout_confirm">确认登出吗？</string>
    <string name="permission">权限</string>
    <string name="new_fan">新粉丝</string>
    <string name="new_video_by_following">关注的人发布了新视频</string>
    <string name="new_danmaku">新弹幕</string>
    <string name="edit_nickname">编辑昵称</string>
    <string name="original_name_is" formatted="false">原名为：%s</string>
    <string name="create_topic">创建话题</string>
    <string name="new_topic">新话题</string>
    <string name="topic_desc_edit_hint">话题描述（选填）</string>
    <string name="cash_income_desc">在可见上传有趣的视频，吸引粉丝，就可以获得现金收益</string>
    <string name="total_income_rmb">总收益（元）</string>
    <string name="this_month_income_rmb">当月收益（元）</string>
    <string name="remain_income_rmb">未领收益（元）</string>
    <string name="cash_out">提现</string>
    <string name="income_can_cash_out_rmb">可提现收益（元）</string>
    <string name="your_account">您的账号</string>
    <string name="cash_out_record">提现记录</string>
    <string name="no_money_num">0.000</string>
    <string name="income_explain">收入说明</string>
    <string name="income_explain_title">在可见上传有趣的视频，吸引粉丝就可以获得现金收益</string>
    <string name="income_explain_detail1">- 打赏你的人越多，收入越多；</string>
    <string name="income_explain_detail2">- 上传高质量视频，在星探中被更多人支持，可以带来稳定收入；</string>
    <string name="income_explain_detail3">- 努力上热门可以使收入大幅增长！</string>
    <string name="coin_to_koo_explain">友情提示：1 个打赏 消耗 1 金币</string>
    <string name="green_danmaku_explain">1 个打赏 = 绿色弹幕</string>
    <string name="purple_danmaku_explain">5 个打赏 = 紫色弹幕</string>
    <string name="master_danmaku_explain">25 个打赏 = 橙色弹幕</string>
</resources>