<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.koolew.mars.IncomeExplainActivity">

    <com.koolew.mars.view.TitleBarView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/koolew_red"
        app:title_text="@string/income_explain"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/shadow_height"
        android:background="@mipmap/shadow"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:gravity="center"
        android:textColor="#2D6CA5"
        android:textSize="20sp"
        android:text="@string/income_explain_title"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@mipmap/horizontal_dash_line"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="13dp"
        android:textColor="#696969"
        android:textSize="14sp"
        android:text="@string/income_explain_detail1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="13dp"
        android:layout_marginRight="13dp"
        android:textColor="#696969"
        android:textSize="14sp"
        android:text="@string/income_explain_detail2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="13dp"
        android:layout_marginRight="13dp"
        android:textColor="#696969"
        android:textSize="14sp"
        android:text="@string/income_explain_detail3"/>
</LinearLayout>
