<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:TitleBarView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F4D288"
    tools:context="com.koolew.mars.CreateTopicActivity">

    <com.koolew.mars.view.TitleBarView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#F4D288"
        TitleBarView:title_text="@string/create_topic"
        TitleBarView:right_text="@string/done"/>

    <EditText
        android:id="@+id/title_edit"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:gravity="center_vertical|left"
        android:singleLine="true"
        android:textColorHint="@color/koolew_gray"
        android:hint="@string/new_topic"
        android:textColor="@color/koolew_dark_gray"
        android:textSize="16sp"
        android:background="@drawable/create_topic_edit_bg"/>

    <EditText
        android:id="@+id/desc_edit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:gravity="left|top"
        android:textColorHint="@color/koolew_light_gray"
        android:hint="@string/topic_desc_edit_hint"
        android:textColor="@color/koolew_gray"
        android:textSize="16sp"
        android:background="@drawable/create_topic_edit_bg"/>

</LinearLayout>
