<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/dash_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/first_koo_dash_line"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dash_line"
        android:layout_marginTop="11dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/koo_icon"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:src="@mipmap/ic_koo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/koo"
            android:textColor="@color/koolew_light_gray"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/give_koo_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/coin_to_koo_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/give_koo_title"
        android:layout_below="@+id/give_koo_title"
        android:textColor="#9EADB7"
        android:textSize="12sp"
        android:text="@string/coin_to_koo_explain"/>

    <TextView
        android:id="@+id/green_danmaku_explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/coin_to_koo_hint"
        android:layout_marginLeft="15dp"
        android:layout_below="@+id/coin_to_koo_hint"
        android:layout_marginTop="25dp"
        android:textColor="@color/danmaku_green"
        android:textSize="14sp"
        android:text="@string/green_danmaku_explain"/>

    <TextView
        android:id="@+id/purple_danmaku_explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/green_danmaku_explain"
        android:layout_alignLeft="@+id/green_danmaku_explain"
        android:textColor="@color/danmaku_purple"
        android:textSize="14sp"
        android:text="@string/purple_danmaku_explain"/>

    <TextView
        android:id="@+id/master_danmaku_explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/purple_danmaku_explain"
        android:layout_alignLeft="@+id/purple_danmaku_explain"
        android:textColor="@color/danmaku_master"
        android:textSize="14sp"
        android:text="@string/master_danmaku_explain"/>
</RelativeLayout>