<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:TitleBarView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.koolew.mars.ChangeNicknameActivity">

    <com.koolew.mars.view.TitleBarView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/koolew_deep_blue"
        TitleBarView:title_text="@string/edit_nickname"
        TitleBarView:right_text="@string/save"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/original_nickname"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/original_name_is"
                android:textSize="18sp"
                android:textColor="#ADBBC7"
                android:gravity="center"/>

            <include android:id="@+id/edit_nickname"
                layout="@layout/change_info_edit_text"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/shadow_height"
            android:background="@mipmap/shadow"/>
    </FrameLayout>

</LinearLayout>
