<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.koolew.mars.VideoPrivacyActivity">

    <com.koolew.mars.view.TitleBarView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#333333"
        app:title_text="@string/who_can_see"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:text="@string/authority"
        android:textSize="12sp"
        android:textColor="#C8C8C8"/>

    <include layout="@layout/horizontal_divider"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:onClick="onPublicClick">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_centerVertical="true"
            android:text="@string/public_visible"
            android:textSize="14sp"
            android:textColor="#9B9B9B"/>

        <ImageView
            android:id="@+id/public_check"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/authority_checked"/>
    </RelativeLayout>

    <include layout="@layout/horizontal_divider"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:onClick="onFriendOnlyClick">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_centerVertical="true"
            android:text="@string/only_friend_visible"
            android:textSize="14sp"
            android:textColor="#9B9B9B"/>

        <ImageView
            android:id="@+id/only_friend_check"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/authority_checked"
            android:visibility="invisible"/>
    </RelativeLayout>

    <include layout="@layout/horizontal_divider"/>

</LinearLayout>
