<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.koolew.mars.TodayIncomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/koolew_red">

        <com.koolew.mars.view.TitleBarView
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/koolew_red"
            app:title_text="@string/koolew"
            app:right_text="@string/explain"
            app:right_image_src="@mipmap/ic_explain"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:text="@string/today_income_rmb"/>

        <TextView
            android:id="@+id/today_income"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="72sp"
            android:text="@string/no_money_num"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@mipmap/horizontal_dash_line"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:text="@string/cash_income_desc"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:textColor="#696969"
        android:textSize="17sp"
        android:text="@string/total_income_rmb"/>

    <TextView
        android:id="@+id/total_income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:textColor="@color/koolew_red"
        android:textSize="44sp"
        android:text="@string/no_money_num"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@mipmap/horizontal_dash_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:textColor="#696969"
                android:textSize="17sp"
                android:text="@string/this_month_income_rmb"/>

            <TextView
                android:id="@+id/this_month_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:textColor="@color/koolew_red"
                android:textSize="30sp"
                android:text="@string/no_money_num"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:textColor="#696969"
                android:textSize="17sp"
                android:text="@string/remain_income_rmb"/>

            <TextView
                android:id="@+id/remain_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:textColor="@color/koolew_red"
                android:textSize="30sp"
                android:text="@string/no_money_num"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@mipmap/horizontal_dash_line"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/income_analysis_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="29dp"
            android:textColor="#9B9B9B"
            android:textSize="14sp"
            android:text="@string/income_analysis"
            android:drawableRight="@mipmap/into_arrow"
            android:drawablePadding="10dp"
            android:clickable="true"
            android:onClick="onIncomeAnalysis"/>

        <Button
            android:id="@+id/cash_out"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="49dp"
            android:layout_marginBottom="21dp"
            android:layout_marginRight="49dp"
            android:layout_above="@id/income_analysis_text"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:text="@string/cash_out"
            android:background="@drawable/send_danmaku_send_bg"
            android:onClick="onCashOut"/>
    </RelativeLayout>
</LinearLayout>
