<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.koolew.mars.CashOutActivity">

    <com.koolew.mars.view.TitleBarView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/koolew_red"
        app:title_text="@string/cash_out"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/shadow_height"
        android:background="@mipmap/shadow"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:textSize="14sp"
        android:textColor="#696969"
        android:text="@string/income_can_cash_out_rmb"/>

    <TextView
        android:id="@+id/income_can_cash_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/koolew_red"
        android:text="@string/no_money_num"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/cash_out_alipay_bg">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:src="@mipmap/alipay_logo"/>
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#9B9B9B"
                android:textSize="12sp"
                android:text="@string/your_account"/>

            <TextView
                android:id="@+id/alipay_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#696969"
                android:textSize="16sp"/>
        </LinearLayout>
        
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="10dp"
            android:src="@mipmap/ic_edit"
            android:onClick="onRebindAlipayAccount"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="49dp"
        android:layout_marginRight="49dp"
        android:layout_marginBottom="15dp"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:text="@string/cash_out"
        android:background="@drawable/send_danmaku_send_bg"
        android:onClick="onCashOut"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="49dp"
        android:layout_marginRight="49dp"
        android:layout_marginBottom="30dp"
        android:textSize="16sp"
        android:textColor="#59CADB"
        android:text="@string/cash_out_record"
        android:background="@drawable/send_danmaku_cancel_bg"
        android:onClick="onCashOutRecord"/>
</LinearLayout>
